--- a/requirements.txt
+++ b/requirements.txt
@@ -1,98 +1,48 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-asgiref==3.5.2
-async-timeout==4.0.2
-atomicwrites==1.4.1
-attrs==22.1.0
-Authlib==1.0.1
-beautifulsoup4==4.11.1
-cachetools==5.2.0
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.1
-cloudinary==1.29.0
-colorama==0.4.5
-coverage==6.4.1
-cryptography==37.0.4
-dataclasses==0.6
-defusedxml==0.7.1
-Django==4.0.5
-django-allauth==0.45.0
-django-debug-toolbar==3.4.0
-django-guardian==2.4.0
-django-manifest-loader==1.0.0
-django-mathfilters==1.0.0
-django-model-utils==4.2.0
-django-sendgrid-v5==1.2.0
-django-sslserver==0.22
-djangorestframework==3.13.1
-djproxy==2.3.6
-eight==1.0.1
-frozenlist==1.3.1
-future==0.18.2
-geoip2==4.6.0
-google==3.0.0
-google-api-core==2.8.2
-google-api-python-client==2.50.0
-google-auth==2.11.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.5.2
-google-cloud-core==2.3.2
-google-cloud-runtimeconfig==0.33.2
-google-cloud-storage==2.5.0
-google-cloud-texttospeech==2.12.1
-google-cloud-translate==3.8.1
-google-crc32c==1.3.0
-google-resumable-media==2.3.3
-googleapis-common-protos==1.56.4
-GoogleAppEngineCloudStorageClient==1.9.22.1
-grpcio==1.47.0
-grpcio-status==1.47.0
-httplib2==0.20.4
-huey==2.4.3
-idna==3.3
-image==1.5.33
-iniconfig==1.1.1
-lxml==4.9.1
-maxminddb==2.2.0
-multidict==6.0.2
-ndg-httpsclient==0.5.1
-numpy==1.23.2
-oauthlib==3.2.0
-packaging==21.3
-Pillow==9.1.1
-pluggy==1.0.0
-proto-plus==1.22.1
-protobuf==4.21.5
-psycopg2==2.9.3
-psycopg2-binary==2.9.3
-pusher==3.2.0
-py==1.11.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-PyJWT==2.4.0
-PyNaCl==1.5.0
-pyOpenSSL==20.0.1
-pyparsing==3.0.9
-pytest==7.1.2
-python-dateutil==2.8.1
-python-http-client==3.3.7
-python3-openid==3.2.0
-pytz==2018.7
-requests==2.28.1
+absl-py==1.4.0
+attrs==23.1.0
+cachetools==5.3.1
+cattrs==1.5.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+cloudpickle==2.2.1
+filelock==3.12.2
+google-auth==2.20.0
+google-auth-oauthlib==1.0.0
+grpcio==1.54.2
+gym==0.26.2
+gym-notices==0.0.8
+h5py==3.8.0
+idna==3.4
+importlib-metadata==6.6.0
+Jinja2==3.1.2
+Markdown==3.4.3
+MarkupSafe==2.1.3
+mlagents==0.30.0
+mlagents-envs==0.30.0
+mpmath==1.3.0
+networkx==3.1
+numpy==1.21.2
+oauthlib==3.2.2
+onnx==1.14.0
+PettingZoo==1.15.0
+Pillow==9.5.0
+protobuf==3.20.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pypiwin32==223
+pywin32==306
+PyYAML==6.0
+requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
-sendgrid==6.9.7
-signxml==2.9.0
 six==1.16.0
-soupsieve==2.3.2.post1
-sqlparse==0.4.2
-starkbank-ecdsa==2.0.3
-stripe==2.40.0
-tomli==2.0.1
-tzdata==2022.2
-uritemplate==4.1.1
-urllib3==1.26.12
-whitenoise==3.3.1
-yarl==1.8.1
+sympy==1.12
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
+typing_extensions==4.6.3
+urllib3==1.26.16
+Werkzeug==2.3.6
+zipp==3.15.0
